--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -132,56 +132,42 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AnimState.h" />
-    <ClInclude Include="Block.h" />
+    <ClInclude Include="Baccarat.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="checkML.h" />
-    <ClInclude Include="Coin.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="EndState.h" />
-    <ClInclude Include="Enemy.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="gameList.h" />
     <ClInclude Include="gameObject.h" />
     <ClInclude Include="gameState.h" />
     <ClInclude Include="gameStateMachine.h" />
-    <ClInclude Include="Goomba.h" />
-    <ClInclude Include="Koopa.h" />
-    <ClInclude Include="Lift.h" />
     <ClInclude Include="MainMenu.h" />
-    <ClInclude Include="Mushroom.h" />
     <ClInclude Include="PauseState.h" />
     <ClInclude Include="Pickable.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="playState.h" />
     <ClInclude Include="sceneObject.h" />
     <ClInclude Include="Texture.h" />
-    <ClInclude Include="TileMap.h" />
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimState.cpp" />
-    <ClCompile Include="Block.cpp" />
+    <ClCompile Include="Baccarat.cpp" />
     <ClCompile Include="Button.cpp" />
-    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="EndState.cpp" />
-    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gameState.cpp" />
     <ClCompile Include="gameStateMachine.cpp" />
-    <ClCompile Include="Goomba.cpp" />
-    <ClCompile Include="Koopa.cpp" />
-    <ClCompile Include="Lift.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
-    <ClCompile Include="Mushroom.cpp" />
     <ClCompile Include="PauseState.cpp" />
     <ClCompile Include="Pickable.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="playState.cpp" />
     <ClCompile Include="sceneObject.cpp" />
     <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
