--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -144,10 +144,10 @@
     <ClInclude Include="gameState.h" />
     <ClInclude Include="gameStateMachine.h" />
     <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="PauseState.h" />
     <ClInclude Include="Pickable.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="playState.h" />
     <ClInclude Include="sceneObject.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vector2D.h" />
@@ -162,10 +162,10 @@
     <ClCompile Include="gameStateMachine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="PauseState.cpp" />
     <ClCompile Include="Pickable.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="playState.cpp" />
     <ClCompile Include="sceneObject.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
