--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="AnimState.h" />
     <ClInclude Include="Baccarat.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Carrete.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="EndState.h" />
@@ -156,6 +157,7 @@
     <ClCompile Include="AnimState.cpp" />
     <ClCompile Include="Baccarat.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Carrete.cpp" />
     <ClCompile Include="EndState.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gameState.cpp" />
