--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -134,10 +134,14 @@
     <ClInclude Include="AnimState.h" />
     <ClInclude Include="Baccarat.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="ButtonBet.h" />
+    <ClInclude Include="ButtonChip.h" />
+    <ClInclude Include="ButtonUI.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="EndState.h" />
     <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="gameList.h" />
     <ClInclude Include="gameObject.h" />
@@ -158,6 +162,9 @@
     <ClCompile Include="AnimState.cpp" />
     <ClCompile Include="Baccarat.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="ButtonBet.cpp" />
+    <ClCompile Include="ButtonChip.cpp" />
+    <ClCompile Include="ButtonUI.cpp" />
     <ClCompile Include="EndState.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gameState.cpp" />
