--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Marbles.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="PauseState.h" />
+    <ClInclude Include="Peleas.h" />
     <ClInclude Include="Pickable.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="sceneObject.h" />
@@ -172,6 +173,7 @@
     <ClCompile Include="Marbles.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="PauseState.cpp" />
+    <ClCompile Include="Peleas.cpp" />
     <ClCompile Include="Pickable.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="sceneObject.cpp" />
