--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -132,11 +132,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Baccarat.h" />
+    <ClInclude Include="BaccaratBet.h" />
+    <ClInclude Include="BaccaratBlackjack.h" />
+    <ClInclude Include="BaccaratFlip.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Cards.h" />
     <ClInclude Include="Carrete.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="CrazyBaccaratManager.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
@@ -157,9 +161,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Baccarat.cpp" />
+    <ClCompile Include="BaccaratBet.cpp" />
+    <ClCompile Include="BaccaratBlackjack.cpp" />
+    <ClCompile Include="BaccaratFlip.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Cards.cpp" />
     <ClCompile Include="Carrete.cpp" />
+    <ClCompile Include="CrazyBaccaratManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gameState.cpp" />
     <ClCompile Include="gameStateMachine.cpp" />
