clase base Tutorial
- Se pushea una escena con una imagen y ya, todavia no está especificado como va a ser
-nueva clase uitutorial solo con boton de exit
-toda la clase tutorial

--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Slots.h" />
     <ClInclude Include="SlotsLocura.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Tutorial.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
@@ -172,6 +173,7 @@
     <ClCompile Include="Slots.cpp" />
     <ClCompile Include="SlotsLocura.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Tutorial.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
