--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="gameList.h" />
     <ClInclude Include="gameObject.h" />
     <ClInclude Include="gameState.h" />
     <ClInclude Include="gameStateMachine.h" />
