--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="EndState.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="Font.h" />
@@ -159,6 +160,7 @@
     <ClCompile Include="AnimState.cpp" />
     <ClCompile Include="Baccarat.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="EndState.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gameState.cpp" />
