--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="MatrizSlots.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Peleas.h" />
+    <ClInclude Include="PeleasPelea.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="sceneObject.h" />
     <ClInclude Include="Slots.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="MatrizSlots.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Peleas.cpp" />
+    <ClCompile Include="PeleasPelea.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="sceneObject.cpp" />
     <ClCompile Include="Slots.cpp" />
