Creacion de clase sdlUtils
Agregado una forma de obtener el deltaTime e implementado el deltaTime en la clase Award

--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="Collision.h" />
     <ClInclude Include="HUD.h" />
     <ClInclude Include="PlayerEconomy.h" />
+    <ClInclude Include="sdlutils.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="EndState.h" />
     <ClInclude Include="EventHandler.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Carrete.cpp" />
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="PlayerEconomy.cpp" />
+    <ClCompile Include="sdlUtils.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gameState.cpp" />
