--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Baccarat.h" />
+    <ClInclude Include="Behaviour.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Cards.h" />
     <ClInclude Include="Carrete.h" />
@@ -146,6 +147,7 @@
     <ClInclude Include="Marbles.h" />
     <ClInclude Include="MatrizSlots.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Mesa.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="sceneObject.h" />
     <ClInclude Include="Slots.h" />
@@ -166,6 +168,7 @@
     <ClCompile Include="Marbles.cpp" />
     <ClCompile Include="MatrizSlots.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Mesa.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="sceneObject.cpp" />
     <ClCompile Include="Slots.cpp" />
