--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -133,8 +133,11 @@
   <ItemGroup>
     <ClInclude Include="Award.h" />
     <ClInclude Include="Baccarat.h" />
+    <ClInclude Include="BaccaratBet.h" />
+    <ClInclude Include="BaccaratBlackjack.h" />
+    <ClInclude Include="BaccaratFlip.h" />
     <ClInclude Include="Button.h" />
-    <ClInclude Include="Cards.h" />
+    <ClInclude Include="card.h" />
     <ClInclude Include="Carrete.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
@@ -162,8 +165,11 @@
   <ItemGroup>
     <ClCompile Include="Award.cpp" />
     <ClCompile Include="Baccarat.cpp" />
+    <ClCompile Include="BaccaratBet.cpp" />
+    <ClCompile Include="BaccaratBlackjack.cpp" />
+    <ClCompile Include="BaccaratFlip.cpp" />
     <ClCompile Include="Button.cpp" />
-    <ClCompile Include="Cards.cpp" />
+    <ClCompile Include="card.cpp" />
     <ClCompile Include="Carrete.cpp" />
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="PlayerEconomy.cpp" />
